--- a/README
+++ b/README
@@ -6,5 +6,5 @@ and prototyping only.
 
 PLEASE DO NOT USE IT FOR ANY REASON APART FROM TESTING!
 
-Everything is published under GPL 2.
+This software is published under GPL 2.
 
